Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -140472,5 +140472,356 @@
     "PPS": 1.022654144590418,
     "VAULT_PNL_SPOT": 10636.128894999973,
     "FUEL": 2744420
+  },
+  "2025-05-29 15:30": {
+    "LTVL": 575987.252458,
+    "TVL_USD": 522133.72525400005,
+    "TVL_TOKEN": 522220.78990409285,
+    "SHARES": 510973.595591,
+    "PPS": 1.022011302365016,
+    "VAULT_PNL_SPOT": 10636.128894999973,
+    "FUEL": 2744420
+  },
+  "2025-05-29 15:40": {
+    "LTVL": 575076.405198,
+    "TVL_USD": 522436.92335600004,
+    "TVL_TOKEN": 522531.1984348216,
+    "SHARES": 510973.595591,
+    "PPS": 1.022618786848377,
+    "VAULT_PNL_SPOT": 10241.713037999987,
+    "FUEL": 2744420
+  },
+  "2025-05-29 15:50": {
+    "LTVL": 574808.627014,
+    "TVL_USD": 522320.780791,
+    "TVL_TOKEN": 522411.8580743367,
+    "SHARES": 510973.595591,
+    "PPS": 1.0223852320003093,
+    "VAULT_PNL_SPOT": 10997.449844999996,
+    "FUEL": 2744420
+  },
+  "2025-05-29 16:00": {
+    "LTVL": 574748.069647,
+    "TVL_USD": 522370.49809,
+    "TVL_TOKEN": 522462.8904275432,
+    "SHARES": 510973.595591,
+    "PPS": 1.0224851047797383,
+    "VAULT_PNL_SPOT": 10997.449844999996,
+    "FUEL": 2744420
+  },
+  "2025-05-29 16:10": {
+    "LTVL": 574347.442903,
+    "TVL_USD": 522151.96520900005,
+    "TVL_TOKEN": 522245.144187626,
+    "SHARES": 510973.595591,
+    "PPS": 1.0220589648738878,
+    "VAULT_PNL_SPOT": 11297.473050331639,
+    "FUEL": 2744420
+  },
+  "2025-05-29 16:20": {
+    "LTVL": 574920.546014,
+    "TVL_USD": 522550.892656,
+    "TVL_TOKEN": 522642.60598049744,
+    "SHARES": 510973.595591,
+    "PPS": 1.022836816794811,
+    "VAULT_PNL_SPOT": 11297.473050331639,
+    "FUEL": 2744420
+  },
+  "2025-05-29 16:30": {
+    "LTVL": 574717.817885,
+    "TVL_USD": 522706.525096,
+    "TVL_TOKEN": 522802.19266923657,
+    "SHARES": 510973.595591,
+    "PPS": 1.0231491356506504,
+    "VAULT_PNL_SPOT": 11297.473050331639,
+    "FUEL": 2744420
+  },
+  "2025-05-29 16:40": {
+    "LTVL": 574148.765455,
+    "TVL_USD": 522288.182655,
+    "TVL_TOKEN": 522384.99626635807,
+    "SHARES": 510973.595591,
+    "PPS": 1.0223326621450164,
+    "VAULT_PNL_SPOT": 11447.738068258099,
+    "FUEL": 2744420
+  },
+  "2025-05-29 16:50": {
+    "LTVL": 574155.287924,
+    "TVL_USD": 522620.93414800003,
+    "TVL_TOKEN": 522716.2253158751,
+    "SHARES": 510973.595591,
+    "PPS": 1.0229808933890085,
+    "VAULT_PNL_SPOT": 11447.738068258099,
+    "FUEL": 2744420
+  },
+  "2025-05-29 17:00": {
+    "LTVL": 572676.718009,
+    "TVL_USD": 522296.309214,
+    "TVL_TOKEN": 522375.28190911905,
+    "SHARES": 510973.595591,
+    "PPS": 1.0223136506788217,
+    "VAULT_PNL_SPOT": 11447.738068258099,
+    "FUEL": 2744420
+  },
+  "2025-05-29 17:10": {
+    "LTVL": 573113.924844,
+    "TVL_USD": 522498.141295,
+    "TVL_TOKEN": 522566.27348573704,
+    "SHARES": 510973.595591,
+    "PPS": 1.0226874304166906,
+    "VAULT_PNL_SPOT": 10579.119947,
+    "FUEL": 2744420
+  },
+  "2025-05-29 17:20": {
+    "LTVL": 572757.929466,
+    "TVL_USD": 522528.48623,
+    "TVL_TOKEN": 522596.8628035292,
+    "SHARES": 510973.595591,
+    "PPS": 1.0227472951886791,
+    "VAULT_PNL_SPOT": 10579.119947,
+    "FUEL": 2744420
+  },
+  "2025-05-29 17:30": {
+    "LTVL": 572736.86843,
+    "TVL_USD": 522306.25763600005,
+    "TVL_TOKEN": 522380.95288845355,
+    "SHARES": 510973.595591,
+    "PPS": 1.0223247490592144,
+    "VAULT_PNL_SPOT": 10579.119947,
+    "FUEL": 2744420
+  },
+  "2025-05-29 17:40": {
+    "LTVL": 573478.727792,
+    "TVL_USD": 522585.006687,
+    "TVL_TOKEN": 522656.1924604131,
+    "SHARES": 510973.595591,
+    "PPS": 1.0228634061920574,
+    "VAULT_PNL_SPOT": 10660.973262000014,
+    "FUEL": 2744420
+  },
+  "2025-05-29 17:50": {
+    "LTVL": 573491.025084,
+    "TVL_USD": 522068.71343,
+    "TVL_TOKEN": 522126.7791491092,
+    "SHARES": 510973.595591,
+    "PPS": 1.0218273187780071,
+    "VAULT_PNL_SPOT": 10660.973262000014,
+    "FUEL": 2744420
+  },
+  "2025-05-29 18:00": {
+    "LTVL": 573447.320302,
+    "TVL_USD": 522309.325613,
+    "TVL_TOKEN": 522371.93188903696,
+    "SHARES": 510973.595591,
+    "PPS": 1.0223070945277584,
+    "VAULT_PNL_SPOT": 10660.973262000014,
+    "FUEL": 2744420
+  },
+  "2025-05-29 18:10": {
+    "LTVL": 573825.198122,
+    "TVL_USD": 521819.221826,
+    "TVL_TOKEN": 521889.9013753433,
+    "SHARES": 510973.595591,
+    "PPS": 1.0213637375366087,
+    "VAULT_PNL_SPOT": 11291.60196900001,
+    "FUEL": 2744420
+  },
+  "2025-05-29 18:20": {
+    "LTVL": 574067.91217,
+    "TVL_USD": 522623.591054,
+    "TVL_TOKEN": 522693.82019568153,
+    "SHARES": 510973.595591,
+    "PPS": 1.0229370454869116,
+    "VAULT_PNL_SPOT": 11291.60196900001,
+    "FUEL": 2750747
+  },
+  "2025-05-29 18:30": {
+    "LTVL": 573803.720122,
+    "TVL_USD": 522605.06841,
+    "TVL_TOKEN": 522704.1103848357,
+    "SHARES": 510973.595591,
+    "PPS": 1.0229571838839695,
+    "VAULT_PNL_SPOT": 11291.60196900001,
+    "FUEL": 2750747
+  },
+  "2025-05-29 18:40": {
+    "LTVL": 572909.696648,
+    "TVL_USD": 522395.40715900005,
+    "TVL_TOKEN": 522481.5904973526,
+    "SHARES": 510973.595591,
+    "PPS": 1.022521701719327,
+    "VAULT_PNL_SPOT": 10765.607501999999,
+    "FUEL": 2750747
+  },
+  "2025-05-29 18:50": {
+    "LTVL": 572269.245801,
+    "TVL_USD": 522026.58561999997,
+    "TVL_TOKEN": 522129.37723049533,
+    "SHARES": 510973.595591,
+    "PPS": 1.0218324033487336,
+    "VAULT_PNL_SPOT": 10765.607501999999,
+    "FUEL": 2750747
+  },
+  "2025-05-29 19:00": {
+    "LTVL": 572307.046731,
+    "TVL_USD": 522734.13613700005,
+    "TVL_TOKEN": 522822.20553752285,
+    "SHARES": 510973.595591,
+    "PPS": 1.0231883018002497,
+    "VAULT_PNL_SPOT": 10765.607501999999,
+    "FUEL": 2750747
+  },
+  "2025-05-29 19:10": {
+    "LTVL": 571235.524547,
+    "TVL_USD": 522538.573179,
+    "TVL_TOKEN": 522629.84002796403,
+    "SHARES": 510973.595591,
+    "PPS": 1.0228118332092724,
+    "VAULT_PNL_SPOT": 11000.137894999993,
+    "FUEL": 2750747
+  },
+  "2025-05-29 19:20": {
+    "LTVL": 569839.542193,
+    "TVL_USD": 522030.340554,
+    "TVL_TOKEN": 522123.03305605846,
+    "SHARES": 510973.595591,
+    "PPS": 1.0218199874930187,
+    "VAULT_PNL_SPOT": 11000.137894999993,
+    "FUEL": 2750747
+  },
+  "2025-05-29 19:30": {
+    "LTVL": 570630.058615,
+    "TVL_USD": 522450.90989,
+    "TVL_TOKEN": 522539.5534998557,
+    "SHARES": 510973.595591,
+    "PPS": 1.0226351381140906,
+    "VAULT_PNL_SPOT": 11000.137894999993,
+    "FUEL": 2750747
+  },
+  "2025-05-29 19:40": {
+    "LTVL": 570963.852255,
+    "TVL_USD": 522614.31501300004,
+    "TVL_TOKEN": 522704.18877121736,
+    "SHARES": 510973.595591,
+    "PPS": 1.0229573372899037,
+    "VAULT_PNL_SPOT": 11232.518202000007,
+    "FUEL": 2750747
+  },
+  "2025-05-29 19:50": {
+    "LTVL": 570997.249399,
+    "TVL_USD": 522236.19842499995,
+    "TVL_TOKEN": 522317.73222299997,
+    "SHARES": 510973.595591,
+    "PPS": 1.0222010231641796,
+    "VAULT_PNL_SPOT": 11232.518202000007,
+    "FUEL": 2750747
+  },
+  "2025-05-29 20:00": {
+    "LTVL": 570767.483757,
+    "TVL_USD": 522465.070069,
+    "TVL_TOKEN": 522546.9584028513,
+    "SHARES": 510973.595591,
+    "PPS": 1.0226496298668142,
+    "VAULT_PNL_SPOT": 11232.518202000007,
+    "FUEL": 2750747
+  },
+  "2025-05-29 20:10": {
+    "LTVL": 571017.490282,
+    "TVL_USD": 522493.149783,
+    "TVL_TOKEN": 522570.2497976551,
+    "SHARES": 510973.595591,
+    "PPS": 1.0226952122511188,
+    "VAULT_PNL_SPOT": 10461.56788799999,
+    "FUEL": 2750747
+  },
+  "2025-05-29 20:20": {
+    "LTVL": 571643.977237,
+    "TVL_USD": 522339.245165,
+    "TVL_TOKEN": 522415.9096997484,
+    "SHARES": 510973.595591,
+    "PPS": 1.022393161226881,
+    "VAULT_PNL_SPOT": 10461.56788799999,
+    "FUEL": 2750747
+  },
+  "2025-05-29 20:30": {
+    "LTVL": 571628.900189,
+    "TVL_USD": 522721.41928000003,
+    "TVL_TOKEN": 522796.2366494269,
+    "SHARES": 510973.595591,
+    "PPS": 1.0231374794322838,
+    "VAULT_PNL_SPOT": 10461.56788799999,
+    "FUEL": 2750747
+  },
+  "2025-05-29 20:40": {
+    "LTVL": 571959.3168,
+    "TVL_USD": 522712.581937,
+    "TVL_TOKEN": 522781.8662177298,
+    "SHARES": 510973.595591,
+    "PPS": 1.0231093558035464,
+    "VAULT_PNL_SPOT": 11160.26871169469,
+    "FUEL": 2750747
+  },
+  "2025-05-29 20:50": {
+    "LTVL": 570940.256882,
+    "TVL_USD": 522324.162403,
+    "TVL_TOKEN": 522397.3398223623,
+    "SHARES": 510973.595591,
+    "PPS": 1.022356819080151,
+    "VAULT_PNL_SPOT": 10969.939849999966,
+    "FUEL": 2750747
+  },
+  "2025-05-29 21:00": {
+    "LTVL": 571241.840408,
+    "TVL_USD": 522278.169521,
+    "TVL_TOKEN": 522351.8838188445,
+    "SHARES": 510973.595591,
+    "PPS": 1.0222678594863286,
+    "VAULT_PNL_SPOT": 10969.939849999966,
+    "FUEL": 2750747
+  },
+  "2025-05-29 21:10": {
+    "LTVL": 571450.684001,
+    "TVL_USD": 522280.42154,
+    "TVL_TOKEN": 522357.1662548662,
+    "SHARES": 510973.595591,
+    "PPS": 1.0222781974686967,
+    "VAULT_PNL_SPOT": 10889.327868193155,
+    "FUEL": 2750747
+  },
+  "2025-05-29 21:20": {
+    "LTVL": 572306.538416,
+    "TVL_USD": 522479.157349,
+    "TVL_TOKEN": 522558.1263330514,
+    "SHARES": 510973.595591,
+    "PPS": 1.0226714860454826,
+    "VAULT_PNL_SPOT": 10889.327868193155,
+    "FUEL": 2750747
+  },
+  "2025-05-29 21:30": {
+    "LTVL": 571852.648034,
+    "TVL_USD": 522399.86391200003,
+    "TVL_TOKEN": 522478.7738812193,
+    "SHARES": 510973.595591,
+    "PPS": 1.0225161894655481,
+    "VAULT_PNL_SPOT": 10889.327868193155,
+    "FUEL": 2750747
+  },
+  "2025-05-29 21:40": {
+    "LTVL": 572477.137821,
+    "TVL_USD": 522455.98576999997,
+    "TVL_TOKEN": 522533.4356758359,
+    "SHARES": 510973.595591,
+    "PPS": 1.0226231652370719,
+    "VAULT_PNL_SPOT": 11117.562631450593,
+    "FUEL": 2750747
+  },
+  "2025-05-29 21:50": {
+    "LTVL": 572722.627868,
+    "TVL_USD": 522621.690207,
+    "TVL_TOKEN": 522698.76736723597,
+    "SHARES": 510973.595591,
+    "PPS": 1.0229467273405282,
+    "VAULT_PNL_SPOT": 11117.562631450593,
+    "FUEL": 2750747
   }
 }
