Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -140958,5 +140958,176 @@
     "PPS": 1.0221522689750429,
     "VAULT_PNL_SPOT": 10921.525058844069,
     "FUEL": 2752602
+  },
+  "2025-05-30 00:30": {
+    "LTVL": 570538.795017,
+    "TVL_USD": 522150.37974299997,
+    "TVL_TOKEN": 522216.3356661946,
+    "SHARES": 510973.595591,
+    "PPS": 1.0220025852063668,
+    "VAULT_PNL_SPOT": 10921.525058844069,
+    "FUEL": 2752602
+  },
+  "2025-05-30 00:40": {
+    "LTVL": 569850.784042,
+    "TVL_USD": 522040.55461899994,
+    "TVL_TOKEN": 522121.95343153994,
+    "SHARES": 510973.595591,
+    "PPS": 1.021817874615704,
+    "VAULT_PNL_SPOT": 11223.081651999964,
+    "FUEL": 2752602
+  },
+  "2025-05-30 00:50": {
+    "LTVL": 569227.199554,
+    "TVL_USD": 523607.975277,
+    "TVL_TOKEN": 523681.688711503,
+    "SHARES": 510973.595591,
+    "PPS": 1.024870351873671,
+    "VAULT_PNL_SPOT": 11223.081651999964,
+    "FUEL": 2752602
+  },
+  "2025-05-30 01:00": {
+    "LTVL": 563129.184313,
+    "TVL_USD": 523253.155409,
+    "TVL_TOKEN": 523330.45655073714,
+    "SHARES": 510973.595591,
+    "PPS": 1.024182973575073,
+    "VAULT_PNL_SPOT": 11223.081651999964,
+    "FUEL": 2752602
+  },
+  "2025-05-30 01:10": {
+    "LTVL": 565488.280859,
+    "TVL_USD": 522550.284248,
+    "TVL_TOKEN": 522622.876565555,
+    "SHARES": 510973.595591,
+    "PPS": 1.0227982053770925,
+    "VAULT_PNL_SPOT": 10731.596416675951,
+    "FUEL": 2760607
+  },
+  "2025-05-30 01:20": {
+    "LTVL": 566092.939214,
+    "TVL_USD": 522878.42735799996,
+    "TVL_TOKEN": 522954.2923371893,
+    "SHARES": 510973.595591,
+    "PPS": 1.0234468020452843,
+    "VAULT_PNL_SPOT": 10731.596416675951,
+    "FUEL": 2760607
+  },
+  "2025-05-30 01:30": {
+    "LTVL": 566577.224102,
+    "TVL_USD": 522195.60171,
+    "TVL_TOKEN": 522270.2863609496,
+    "SHARES": 510973.595591,
+    "PPS": 1.0221081693211245,
+    "VAULT_PNL_SPOT": 10731.596416675951,
+    "FUEL": 2760607
+  },
+  "2025-05-30 01:40": {
+    "LTVL": 566615.524637,
+    "TVL_USD": 522276.11801499996,
+    "TVL_TOKEN": 522351.60826942703,
+    "SHARES": 510973.595591,
+    "PPS": 1.0222673202228132,
+    "VAULT_PNL_SPOT": 10816.925323535048,
+    "FUEL": 2760607
+  },
+  "2025-05-30 01:50": {
+    "LTVL": 566656.636231,
+    "TVL_USD": 522932.150015,
+    "TVL_TOKEN": 523008.5772583948,
+    "SHARES": 510973.595591,
+    "PPS": 1.0235530402573443,
+    "VAULT_PNL_SPOT": 10816.925323535048,
+    "FUEL": 2760607
+  },
+  "2025-05-30 02:00": {
+    "LTVL": 566121.633311,
+    "TVL_USD": 522514.610203,
+    "TVL_TOKEN": 522589.97812964587,
+    "SHARES": 510973.595591,
+    "PPS": 1.0227338215494486,
+    "VAULT_PNL_SPOT": 10816.925323535048,
+    "FUEL": 2760607
+  },
+  "2025-05-30 02:10": {
+    "LTVL": 567073.588409,
+    "TVL_USD": 522295.102654,
+    "TVL_TOKEN": 522370.3710007575,
+    "SHARES": 510973.595591,
+    "PPS": 1.0223040397940246,
+    "VAULT_PNL_SPOT": 11470.54939006205,
+    "FUEL": 2760607
+  },
+  "2025-05-30 02:20": {
+    "LTVL": 567618.687354,
+    "TVL_USD": 522150.702208,
+    "TVL_TOKEN": 522225.4378904165,
+    "SHARES": 510973.595591,
+    "PPS": 1.0220203986986889,
+    "VAULT_PNL_SPOT": 11470.54939006205,
+    "FUEL": 2760607
+  },
+  "2025-05-30 02:30": {
+    "LTVL": 568200.470317,
+    "TVL_USD": 522441.245644,
+    "TVL_TOKEN": 522515.4376109864,
+    "SHARES": 510973.595591,
+    "PPS": 1.0225879421550872,
+    "VAULT_PNL_SPOT": 11470.54939006205,
+    "FUEL": 2760607
+  },
+  "2025-05-30 02:40": {
+    "LTVL": 568617.566492,
+    "TVL_USD": 522388.85175000003,
+    "TVL_TOKEN": 522459.5509764382,
+    "SHARES": 510973.595591,
+    "PPS": 1.0224785693126734,
+    "VAULT_PNL_SPOT": 11091.975456799031,
+    "FUEL": 2760607
+  },
+  "2025-05-30 02:50": {
+    "LTVL": 568805.003457,
+    "TVL_USD": 522352.643971,
+    "TVL_TOKEN": 522424.75425983046,
+    "SHARES": 510973.595591,
+    "PPS": 1.0224104704580397,
+    "VAULT_PNL_SPOT": 11091.975456799031,
+    "FUEL": 2760607
+  },
+  "2025-05-30 03:00": {
+    "LTVL": 568775.723358,
+    "TVL_USD": 522476.655696,
+    "TVL_TOKEN": 522558.8437509451,
+    "SHARES": 510973.595591,
+    "PPS": 1.0226728900669426,
+    "VAULT_PNL_SPOT": 11091.975456799031,
+    "FUEL": 2760607
+  },
+  "2025-05-30 03:10": {
+    "LTVL": 569064.64021,
+    "TVL_USD": 522702.886426,
+    "TVL_TOKEN": 522785.700908881,
+    "SHARES": 510973.595591,
+    "PPS": 1.0231168604792953,
+    "VAULT_PNL_SPOT": 11356.358405410661,
+    "FUEL": 2760607
+  },
+  "2025-05-30 03:20": {
+    "LTVL": 569090.410555,
+    "TVL_USD": 522338.602298,
+    "TVL_TOKEN": 522412.5184452348,
+    "SHARES": 510973.595591,
+    "PPS": 1.0223865243780441,
+    "VAULT_PNL_SPOT": 11356.358405410661,
+    "FUEL": 2760607
+  },
+  "2025-05-30 03:30": {
+    "LTVL": 569629.395288,
+    "TVL_USD": 522503.40393,
+    "TVL_TOKEN": 522583.3539573219,
+    "SHARES": 510973.595591,
+    "PPS": 1.0227208577243485,
+    "VAULT_PNL_SPOT": 11356.358405410661,
+    "FUEL": 2760607
   }
 }
