Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -141129,5 +141129,239 @@
     "PPS": 1.0227208577243485,
     "VAULT_PNL_SPOT": 11356.358405410661,
     "FUEL": 2760607
+  },
+  "2025-05-30 03:40": {
+    "LTVL": 569560.633943,
+    "TVL_USD": 522658.120832,
+    "TVL_TOKEN": 522736.6149621027,
+    "SHARES": 510973.595591,
+    "PPS": 1.0230207969112326,
+    "VAULT_PNL_SPOT": 11205.948473999975,
+    "FUEL": 2760607
+  },
+  "2025-05-30 03:50": {
+    "LTVL": 569270.12186,
+    "TVL_USD": 522661.23258099996,
+    "TVL_TOKEN": 522739.125938156,
+    "SHARES": 510973.595591,
+    "PPS": 1.0230257110126166,
+    "VAULT_PNL_SPOT": 11205.948473999975,
+    "FUEL": 2760607
+  },
+  "2025-05-30 04:00": {
+    "LTVL": 569017.100176,
+    "TVL_USD": 522634.69488300005,
+    "TVL_TOKEN": 522712.7829456443,
+    "SHARES": 510973.595591,
+    "PPS": 1.0229741565042447,
+    "VAULT_PNL_SPOT": 11205.948473999975,
+    "FUEL": 2760607
+  },
+  "2025-05-30 04:10": {
+    "LTVL": 568536.817135,
+    "TVL_USD": 522855.388935,
+    "TVL_TOKEN": 522933.40536974714,
+    "SHARES": 510973.595591,
+    "PPS": 1.0234059252414291,
+    "VAULT_PNL_SPOT": 11520.714628208487,
+    "FUEL": 2760607
+  },
+  "2025-05-30 04:20": {
+    "LTVL": 568345.101599,
+    "TVL_USD": 522930.52041999996,
+    "TVL_TOKEN": 523007.7268206332,
+    "SHARES": 510973.595591,
+    "PPS": 1.0235513759095798,
+    "VAULT_PNL_SPOT": 11520.714628208487,
+    "FUEL": 2760607
+  },
+  "2025-05-30 04:30": {
+    "LTVL": 568528.093458,
+    "TVL_USD": 522603.622181,
+    "TVL_TOKEN": 522681.14102102484,
+    "SHARES": 510973.595591,
+    "PPS": 1.022912231729868,
+    "VAULT_PNL_SPOT": 11520.714628208487,
+    "FUEL": 2760607
+  },
+  "2025-05-30 04:40": {
+    "LTVL": 568498.186035,
+    "TVL_USD": 522494.951228,
+    "TVL_TOKEN": 522564.00806166534,
+    "SHARES": 510973.595591,
+    "PPS": 1.0226829968723916,
+    "VAULT_PNL_SPOT": 11580.594469118107,
+    "FUEL": 2760607
+  },
+  "2025-05-30 04:50": {
+    "LTVL": 569060.054924,
+    "TVL_USD": 522381.415675,
+    "TVL_TOKEN": 522458.018469668,
+    "SHARES": 510973.595591,
+    "PPS": 1.0224755701229238,
+    "VAULT_PNL_SPOT": 11580.594469118107,
+    "FUEL": 2760607
+  },
+  "2025-05-30 05:00": {
+    "LTVL": 569296.936491,
+    "TVL_USD": 522569.253826,
+    "TVL_TOKEN": 522645.37712517823,
+    "SHARES": 510973.595591,
+    "PPS": 1.0228422400587618,
+    "VAULT_PNL_SPOT": 11580.594469118107,
+    "FUEL": 2760607
+  },
+  "2025-05-30 05:10": {
+    "LTVL": 569823.899405,
+    "TVL_USD": 522680.527586,
+    "TVL_TOKEN": 522755.929901329,
+    "SHARES": 510973.595591,
+    "PPS": 1.0230585971799606,
+    "VAULT_PNL_SPOT": 11014.191238,
+    "FUEL": 2760607
+  },
+  "2025-05-30 05:20": {
+    "LTVL": 569634.104655,
+    "TVL_USD": 522715.678129,
+    "TVL_TOKEN": 522791.1168871668,
+    "SHARES": 510973.595591,
+    "PPS": 1.0231274598103224,
+    "VAULT_PNL_SPOT": 11014.191238,
+    "FUEL": 2760607
+  },
+  "2025-05-30 05:30": {
+    "LTVL": 569821.764502,
+    "TVL_USD": 522606.991454,
+    "TVL_TOKEN": 522680.6423833183,
+    "SHARES": 510973.595591,
+    "PPS": 1.0229112558717985,
+    "VAULT_PNL_SPOT": 11014.191238,
+    "FUEL": 2760607
+  },
+  "2025-05-30 05:40": {
+    "LTVL": 569800.57199,
+    "TVL_USD": 522677.39746,
+    "TVL_TOKEN": 522751.47657174495,
+    "SHARES": 510973.595591,
+    "PPS": 1.0230498817989264,
+    "VAULT_PNL_SPOT": 11168.475679411553,
+    "FUEL": 2760607
+  },
+  "2025-05-30 05:50": {
+    "LTVL": 569079.267798,
+    "TVL_USD": 522923.101161,
+    "TVL_TOKEN": 522995.15420339466,
+    "SHARES": 510973.595591,
+    "PPS": 1.0235267706905489,
+    "VAULT_PNL_SPOT": 11168.475679411553,
+    "FUEL": 2760607
+  },
+  "2025-05-30 06:00": {
+    "LTVL": 569179.925028,
+    "TVL_USD": 522409.615504,
+    "TVL_TOKEN": 522487.0689871067,
+    "SHARES": 510973.595591,
+    "PPS": 1.0225324233883162,
+    "VAULT_PNL_SPOT": 11168.475679411553,
+    "FUEL": 2760607
+  },
+  "2025-05-30 06:10": {
+    "LTVL": 568805.023551,
+    "TVL_USD": 522645.917763,
+    "TVL_TOKEN": 522724.61395363073,
+    "SHARES": 510973.595591,
+    "PPS": 1.022997310358159,
+    "VAULT_PNL_SPOT": 11458.648876652122,
+    "FUEL": 2766292
+  },
+  "2025-05-30 06:20": {
+    "LTVL": 568512.196257,
+    "TVL_USD": 522765.953688,
+    "TVL_TOKEN": 522844.3280527751,
+    "SHARES": 510973.595591,
+    "PPS": 1.0232315966308303,
+    "VAULT_PNL_SPOT": 11458.648876652122,
+    "FUEL": 2766292
+  },
+  "2025-05-30 06:30": {
+    "LTVL": 567924.68104,
+    "TVL_USD": 523053.77694899996,
+    "TVL_TOKEN": 523132.1630723147,
+    "SHARES": 510973.595591,
+    "PPS": 1.023794903662785,
+    "VAULT_PNL_SPOT": 11458.648876652122,
+    "FUEL": 2766292
+  },
+  "2025-05-30 06:40": {
+    "LTVL": 567475.012882,
+    "TVL_USD": 522911.522415,
+    "TVL_TOKEN": 522989.95521858416,
+    "SHARES": 510973.595591,
+    "PPS": 1.0235165960262307,
+    "VAULT_PNL_SPOT": 11658.176646262698,
+    "FUEL": 2766292
+  },
+  "2025-05-30 06:50": {
+    "LTVL": 566578.461332,
+    "TVL_USD": 523056.45779,
+    "TVL_TOKEN": 523134.9803505507,
+    "SHARES": 510973.595591,
+    "PPS": 1.023800417212331,
+    "VAULT_PNL_SPOT": 11658.176646262698,
+    "FUEL": 2766292
+  },
+  "2025-05-30 07:00": {
+    "LTVL": 566530.059764,
+    "TVL_USD": 522530.192982,
+    "TVL_TOKEN": 522602.0873511569,
+    "SHARES": 510973.595591,
+    "PPS": 1.0227575198806647,
+    "VAULT_PNL_SPOT": 11658.176646262698,
+    "FUEL": 2766292
+  },
+  "2025-05-30 07:10": {
+    "LTVL": 566620.037471,
+    "TVL_USD": 523007.316388,
+    "TVL_TOKEN": 523084.71723360906,
+    "SHARES": 510973.595591,
+    "PPS": 1.0237020498654166,
+    "VAULT_PNL_SPOT": 11033.119797965512,
+    "FUEL": 2766292
+  },
+  "2025-05-30 07:20": {
+    "LTVL": 566368.719953,
+    "TVL_USD": 522758.21608299995,
+    "TVL_TOKEN": 522836.0611441437,
+    "SHARES": 510973.595591,
+    "PPS": 1.0232154178914536,
+    "VAULT_PNL_SPOT": 11033.119797965512,
+    "FUEL": 2766292
+  },
+  "2025-05-30 07:30": {
+    "LTVL": 567275.202245,
+    "TVL_USD": 522370.39548600005,
+    "TVL_TOKEN": 522447.5191887827,
+    "SHARES": 510973.595591,
+    "PPS": 1.0224550225232516,
+    "VAULT_PNL_SPOT": 11033.119797965512,
+    "FUEL": 2766292
+  },
+  "2025-05-30 07:40": {
+    "LTVL": 566816.273242,
+    "TVL_USD": 522661.052628,
+    "TVL_TOKEN": 522737.3304592606,
+    "SHARES": 510973.595591,
+    "PPS": 1.02302219717372,
+    "VAULT_PNL_SPOT": 11033.119797965512,
+    "FUEL": 2766292
+  },
+  "2025-05-30 07:50": {
+    "LTVL": 566381.231361,
+    "TVL_USD": 522751.671333,
+    "TVL_TOKEN": 522828.3075063143,
+    "SHARES": 510973.595591,
+    "PPS": 1.023200243647821,
+    "VAULT_PNL_SPOT": 11033.119797965512,
+    "FUEL": 2766292
   }
 }
