Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -141363,5 +141363,113 @@
     "PPS": 1.023200243647821,
     "VAULT_PNL_SPOT": 11033.119797965512,
     "FUEL": 2766292
+  },
+  "2025-05-30 08:00": {
+    "LTVL": 565585.483541,
+    "TVL_USD": 522865.101838,
+    "TVL_TOKEN": 522935.4994149312,
+    "SHARES": 510973.595591,
+    "PPS": 1.0234100233889696,
+    "VAULT_PNL_SPOT": 11033.119797965512,
+    "FUEL": 2766292
+  },
+  "2025-05-30 08:10": {
+    "LTVL": 564989.368555,
+    "TVL_USD": 522345.059415,
+    "TVL_TOKEN": 522421.55760367995,
+    "SHARES": 510973.595591,
+    "PPS": 1.022404214447596,
+    "VAULT_PNL_SPOT": 11445.306884999969,
+    "FUEL": 2766292
+  },
+  "2025-05-30 08:20": {
+    "LTVL": 565274.436322,
+    "TVL_USD": 523162.925162,
+    "TVL_TOKEN": 523240.0559786518,
+    "SHARES": 510973.595591,
+    "PPS": 1.0240060552903212,
+    "VAULT_PNL_SPOT": 11445.306884999969,
+    "FUEL": 2766292
+  },
+  "2025-05-30 08:30": {
+    "LTVL": 565662.624283,
+    "TVL_USD": 522361.29885099997,
+    "TVL_TOKEN": 522436.69691509876,
+    "SHARES": 510973.595591,
+    "PPS": 1.022433842811076,
+    "VAULT_PNL_SPOT": 11445.306884999969,
+    "FUEL": 2766292
+  },
+  "2025-05-30 08:40": {
+    "LTVL": 565950.880005,
+    "TVL_USD": 522643.215993,
+    "TVL_TOKEN": 522720.85572170035,
+    "SHARES": 510973.595591,
+    "PPS": 1.0229899553167974,
+    "VAULT_PNL_SPOT": 10533.255639999988,
+    "FUEL": 2766292
+  },
+  "2025-05-30 08:50": {
+    "LTVL": 566591.34087,
+    "TVL_USD": 522119.186489,
+    "TVL_TOKEN": 522196.84238143056,
+    "SHARES": 510973.595591,
+    "PPS": 1.0219644359068096,
+    "VAULT_PNL_SPOT": 10533.255639999988,
+    "FUEL": 2766292
+  },
+  "2025-05-30 09:00": {
+    "LTVL": 566803.060634,
+    "TVL_USD": 522939.806825,
+    "TVL_TOKEN": 523017.731236777,
+    "SHARES": 510973.595591,
+    "PPS": 1.0235709550350574,
+    "VAULT_PNL_SPOT": 10533.255639999988,
+    "FUEL": 2766292
+  },
+  "2025-05-30 09:10": {
+    "LTVL": 566716.950854,
+    "TVL_USD": 523145.226394,
+    "TVL_TOKEN": 523223.16571676516,
+    "SHARES": 510973.595591,
+    "PPS": 1.0239730002322276,
+    "VAULT_PNL_SPOT": 11288.467024000012,
+    "FUEL": 2766292
+  },
+  "2025-05-30 09:20": {
+    "LTVL": 566758.275313,
+    "TVL_USD": 522542.71228200005,
+    "TVL_TOKEN": 522620.1123206347,
+    "SHARES": 510973.595591,
+    "PPS": 1.022792795616306,
+    "VAULT_PNL_SPOT": 11288.467024000012,
+    "FUEL": 2766292
+  },
+  "2025-05-30 09:30": {
+    "LTVL": 566619.713225,
+    "TVL_USD": 522966.768649,
+    "TVL_TOKEN": 523044.60814758454,
+    "SHARES": 510973.595591,
+    "PPS": 1.0236235544473156,
+    "VAULT_PNL_SPOT": 11288.467024000012,
+    "FUEL": 2766292
+  },
+  "2025-05-30 09:40": {
+    "LTVL": 564326.176354,
+    "TVL_USD": 523386.295683,
+    "TVL_TOKEN": 523464.5065149184,
+    "SHARES": 510973.595591,
+    "PPS": 1.0244453158278584,
+    "VAULT_PNL_SPOT": 11542.75756195659,
+    "FUEL": 2766292
+  },
+  "2025-05-30 09:50": {
+    "LTVL": 564476.511086,
+    "TVL_USD": 522853.12247500004,
+    "TVL_TOKEN": 522931.22225304355,
+    "SHARES": 510973.595591,
+    "PPS": 1.0234016527766239,
+    "VAULT_PNL_SPOT": 11542.75756195659,
+    "FUEL": 2766292
   }
 }
