Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -141471,5 +141471,32 @@
     "PPS": 1.0234016527766239,
     "VAULT_PNL_SPOT": 11542.75756195659,
     "FUEL": 2766292
+  },
+  "2025-05-30 10:00": {
+    "LTVL": 565966.931278,
+    "TVL_USD": 522444.56657400005,
+    "TVL_TOKEN": 522522.75687933946,
+    "SHARES": 510973.595591,
+    "PPS": 1.0226022663166803,
+    "VAULT_PNL_SPOT": 11542.75756195659,
+    "FUEL": 2766292
+  },
+  "2025-05-30 10:10": {
+    "LTVL": 565808.035649,
+    "TVL_USD": 523372.153556,
+    "TVL_TOKEN": 523450.5769214343,
+    "SHARES": 510973.595591,
+    "PPS": 1.0244180549407906,
+    "VAULT_PNL_SPOT": 11171.523436999996,
+    "FUEL": 2766292
+  },
+  "2025-05-30 10:20": {
+    "LTVL": 565311.771513,
+    "TVL_USD": 522750.960013,
+    "TVL_TOKEN": 522829.2693809679,
+    "SHARES": 510973.595591,
+    "PPS": 1.023202126082964,
+    "VAULT_PNL_SPOT": 11171.523436999996,
+    "FUEL": 2766292
   }
 }
