--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -141498,5 +141498,518 @@
     "PPS": 1.023202126082964,
     "VAULT_PNL_SPOT": 11171.523436999996,
     "FUEL": 2766292
+  },
+  "2025-05-30 10:30": {
+    "LTVL": 566047.837213,
+    "TVL_USD": 522445.497101,
+    "TVL_TOKEN": 522523.4053407363,
+    "SHARES": 510973.595591,
+    "PPS": 1.0226035353869463,
+    "VAULT_PNL_SPOT": 11171.523436999996,
+    "FUEL": 2766292
+  },
+  "2025-05-30 10:40": {
+    "LTVL": 566064.339199,
+    "TVL_USD": 522427.520505,
+    "TVL_TOKEN": 522505.79709846334,
+    "SHARES": 510973.595591,
+    "PPS": 1.0225690752065673,
+    "VAULT_PNL_SPOT": 11413.975160107133,
+    "FUEL": 2766292
+  },
+  "2025-05-30 10:50": {
+    "LTVL": 566503.223905,
+    "TVL_USD": 522106.577535,
+    "TVL_TOKEN": 522184.597135658,
+    "SHARES": 510973.595591,
+    "PPS": 1.0219404713695455,
+    "VAULT_PNL_SPOT": 11413.975160107133,
+    "FUEL": 2766292
+  },
+  "2025-05-30 11:00": {
+    "LTVL": 567071.934501,
+    "TVL_USD": 522407.423647,
+    "TVL_TOKEN": 522484.9551895006,
+    "SHARES": 510973.595591,
+    "PPS": 1.022528286584332,
+    "VAULT_PNL_SPOT": 11413.975160107133,
+    "FUEL": 2766292
+  },
+  "2025-05-30 11:10": {
+    "LTVL": 567308.96257,
+    "TVL_USD": 522673.22887500003,
+    "TVL_TOKEN": 522751.3174668032,
+    "SHARES": 510973.595591,
+    "PPS": 1.0230495704228726,
+    "VAULT_PNL_SPOT": 11248.628668999998,
+    "FUEL": 2766292
+  },
+  "2025-05-30 11:20": {
+    "LTVL": 567421.371157,
+    "TVL_USD": 522530.824108,
+    "TVL_TOKEN": 522608.32169602433,
+    "SHARES": 510973.595591,
+    "PPS": 1.0227697207946087,
+    "VAULT_PNL_SPOT": 11248.628668999998,
+    "FUEL": 2766292
+  },
+  "2025-05-30 11:30": {
+    "LTVL": 567211.291699,
+    "TVL_USD": 522848.25866,
+    "TVL_TOKEN": 522926.1118995396,
+    "SHARES": 510973.595591,
+    "PPS": 1.0233916515680523,
+    "VAULT_PNL_SPOT": 11248.628668999998,
+    "FUEL": 2766292
+  },
+  "2025-05-30 11:40": {
+    "LTVL": 567220.85932,
+    "TVL_USD": 522706.571856,
+    "TVL_TOKEN": 522783.7347352469,
+    "SHARES": 510973.595591,
+    "PPS": 1.0231130125825527,
+    "VAULT_PNL_SPOT": 11492.630401627277,
+    "FUEL": 2766292
+  },
+  "2025-05-30 11:50": {
+    "LTVL": 566959.379413,
+    "TVL_USD": 522760.21471599996,
+    "TVL_TOKEN": 522837.5057844801,
+    "SHARES": 510973.595591,
+    "PPS": 1.0232182451223495,
+    "VAULT_PNL_SPOT": 11492.630401627277,
+    "FUEL": 2766292
+  },
+  "2025-05-30 12:00": {
+    "LTVL": 567292.679709,
+    "TVL_USD": 522759.820795,
+    "TVL_TOKEN": 522836.7457654045,
+    "SHARES": 510973.595591,
+    "PPS": 1.0232167577283193,
+    "VAULT_PNL_SPOT": 11492.630401627277,
+    "FUEL": 2766292
+  },
+  "2025-05-30 12:10": {
+    "LTVL": 566711.239887,
+    "TVL_USD": 523487.723029,
+    "TVL_TOKEN": 523564.85460338014,
+    "SHARES": 510973.595591,
+    "PPS": 1.0246417018824954,
+    "VAULT_PNL_SPOT": 11304.88032112387,
+    "FUEL": 2768559
+  },
+  "2025-05-30 12:20": {
+    "LTVL": 565295.113064,
+    "TVL_USD": 522712.24592200003,
+    "TVL_TOKEN": 522790.57040525816,
+    "SHARES": 510973.595591,
+    "PPS": 1.0231263903188392,
+    "VAULT_PNL_SPOT": 11304.88032112387,
+    "FUEL": 2768559
+  },
+  "2025-05-30 12:30": {
+    "LTVL": 564743.407815,
+    "TVL_USD": 522466.460369,
+    "TVL_TOKEN": 522543.51986187405,
+    "SHARES": 510973.595591,
+    "PPS": 1.0226429004760844,
+    "VAULT_PNL_SPOT": 11304.88032112387,
+    "FUEL": 2768559
+  },
+  "2025-05-30 12:40": {
+    "LTVL": 565805.677919,
+    "TVL_USD": 522682.15330099995,
+    "TVL_TOKEN": 522758.8943066842,
+    "SHARES": 510973.595591,
+    "PPS": 1.0230643986643833,
+    "VAULT_PNL_SPOT": 11074.516761999985,
+    "FUEL": 2768559
+  },
+  "2025-05-30 12:50": {
+    "LTVL": 566891.012488,
+    "TVL_USD": 522708.192026,
+    "TVL_TOKEN": 522785.44403106446,
+    "SHARES": 510973.595591,
+    "PPS": 1.0231163577570044,
+    "VAULT_PNL_SPOT": 10969.939849999966,
+    "FUEL": 2768559
+  },
+  "2025-05-30 13:00": {
+    "LTVL": 566102.689873,
+    "TVL_USD": 522865.555785,
+    "TVL_TOKEN": 522942.88857936306,
+    "SHARES": 510973.595591,
+    "PPS": 1.023424484340564,
+    "VAULT_PNL_SPOT": 10969.939849999966,
+    "FUEL": 2768559
+  },
+  "2025-05-30 13:10": {
+    "LTVL": 565956.761431,
+    "TVL_USD": 523263.632162,
+    "TVL_TOKEN": 523340.8615729423,
+    "SHARES": 510973.595591,
+    "PPS": 1.0242033367059566,
+    "VAULT_PNL_SPOT": 11284.487610000011,
+    "FUEL": 2768559
+  },
+  "2025-05-30 13:20": {
+    "LTVL": 564987.813507,
+    "TVL_USD": 522909.334442,
+    "TVL_TOKEN": 522986.54294533504,
+    "SHARES": 510973.595591,
+    "PPS": 1.0235099180427134,
+    "VAULT_PNL_SPOT": 11284.487610000011,
+    "FUEL": 2768559
+  },
+  "2025-05-30 13:30": {
+    "LTVL": 564501.605327,
+    "TVL_USD": 522807.65742600005,
+    "TVL_TOKEN": 522884.79862034053,
+    "SHARES": 510973.595591,
+    "PPS": 1.0233107994857618,
+    "VAULT_PNL_SPOT": 11284.487610000011,
+    "FUEL": 2768559
+  },
+  "2025-05-30 13:40": {
+    "LTVL": 564729.559119,
+    "TVL_USD": 522762.598123,
+    "TVL_TOKEN": 522840.2608153415,
+    "SHARES": 510973.595591,
+    "PPS": 1.0232236368507777,
+    "VAULT_PNL_SPOT": 11456.41881199996,
+    "FUEL": 2768559
+  },
+  "2025-05-30 13:50": {
+    "LTVL": 564713.010804,
+    "TVL_USD": 522798.839476,
+    "TVL_TOKEN": 522876.61737283424,
+    "SHARES": 510973.595591,
+    "PPS": 1.0232947883893433,
+    "VAULT_PNL_SPOT": 11456.41881199996,
+    "FUEL": 2768559
+  },
+  "2025-05-30 14:00": {
+    "LTVL": 562948.763327,
+    "TVL_USD": 522411.34873499995,
+    "TVL_TOKEN": 522489.21007708565,
+    "SHARES": 510973.595591,
+    "PPS": 1.022536613604792,
+    "VAULT_PNL_SPOT": 11456.41881199996,
+    "FUEL": 2768559
+  },
+  "2025-05-30 14:10": {
+    "LTVL": 563478.440885,
+    "TVL_USD": 523009.918995,
+    "TVL_TOKEN": 523088.26715565455,
+    "SHARES": 510973.595591,
+    "PPS": 1.023708997234275,
+    "VAULT_PNL_SPOT": 11382.115235999983,
+    "FUEL": 2768559
+  },
+  "2025-05-30 14:20": {
+    "LTVL": 563147.427002,
+    "TVL_USD": 522739.34002199996,
+    "TVL_TOKEN": 522817.6894809455,
+    "SHARES": 510973.595591,
+    "PPS": 1.0231794636594607,
+    "VAULT_PNL_SPOT": 11382.115235999983,
+    "FUEL": 2768559
+  },
+  "2025-05-30 14:30": {
+    "LTVL": 562183.805691,
+    "TVL_USD": 522519.308782,
+    "TVL_TOKEN": 522594.3742379155,
+    "SHARES": 510973.595591,
+    "PPS": 1.0227424249456074,
+    "VAULT_PNL_SPOT": 11382.115235999983,
+    "FUEL": 2768559
+  },
+  "2025-05-30 14:40": {
+    "LTVL": 563705.396719,
+    "TVL_USD": 522258.734708,
+    "TVL_TOKEN": 522336.97556356963,
+    "SHARES": 510973.595591,
+    "PPS": 1.0222386833108794,
+    "VAULT_PNL_SPOT": 11025.762373999984,
+    "FUEL": 2768559
+  },
+  "2025-05-30 14:50": {
+    "LTVL": 563461.137528,
+    "TVL_USD": 522680.221357,
+    "TVL_TOKEN": 522758.5567267255,
+    "SHARES": 510973.595591,
+    "PPS": 1.0230637380041034,
+    "VAULT_PNL_SPOT": 11025.762373999984,
+    "FUEL": 2768559
+  },
+  "2025-05-30 15:00": {
+    "LTVL": 563441.869618,
+    "TVL_USD": 523063.358478,
+    "TVL_TOKEN": 523141.8245202598,
+    "SHARES": 510973.595591,
+    "PPS": 1.0238138115829367,
+    "VAULT_PNL_SPOT": 11025.762373999984,
+    "FUEL": 2768559
+  },
+  "2025-05-30 15:10": {
+    "LTVL": 564076.137386,
+    "TVL_USD": 522409.292056,
+    "TVL_TOKEN": 522487.3986972312,
+    "SHARES": 510973.595591,
+    "PPS": 1.0225330686469507,
+    "VAULT_PNL_SPOT": 11363.16492131917,
+    "FUEL": 2768559
+  },
+  "2025-05-30 15:20": {
+    "LTVL": 563527.538703,
+    "TVL_USD": 522956.797597,
+    "TVL_TOKEN": 523033.6103130106,
+    "SHARES": 510973.595591,
+    "PPS": 1.0236020311540008,
+    "VAULT_PNL_SPOT": 11363.16492131917,
+    "FUEL": 2768559
+  },
+  "2025-05-30 15:30": {
+    "LTVL": 564710.804588,
+    "TVL_USD": 522398.148599,
+    "TVL_TOKEN": 522472.52778805594,
+    "SHARES": 510973.595591,
+    "PPS": 1.0225039655596218,
+    "VAULT_PNL_SPOT": 11363.16492131917,
+    "FUEL": 2768559
+  },
+  "2025-05-30 15:40": {
+    "LTVL": 563707.475335,
+    "TVL_USD": 523032.20137100003,
+    "TVL_TOKEN": 523110.55286960886,
+    "SHARES": 510973.595591,
+    "PPS": 1.0237526114525959,
+    "VAULT_PNL_SPOT": 10958.493459999969,
+    "FUEL": 2768559
+  },
+  "2025-05-30 15:50": {
+    "LTVL": 563792.595981,
+    "TVL_USD": 522710.507099,
+    "TVL_TOKEN": 522784.8941615902,
+    "SHARES": 510973.595591,
+    "PPS": 1.0231152816358917,
+    "VAULT_PNL_SPOT": 10958.493459999969,
+    "FUEL": 2768559
+  },
+  "2025-05-30 16:00": {
+    "LTVL": 563457.200851,
+    "TVL_USD": 522642.350803,
+    "TVL_TOKEN": 522715.9021575926,
+    "SHARES": 510973.595591,
+    "PPS": 1.0229802609526453,
+    "VAULT_PNL_SPOT": 10958.493459999969,
+    "FUEL": 2768559
+  },
+  "2025-05-30 16:10": {
+    "LTVL": 563910.581611,
+    "TVL_USD": 522436.88242700003,
+    "TVL_TOKEN": 522510.2898976278,
+    "SHARES": 510973.595591,
+    "PPS": 1.0225778678314763,
+    "VAULT_PNL_SPOT": 11636.391310999985,
+    "FUEL": 2768559
+  },
+  "2025-05-30 16:20": {
+    "LTVL": 562724.936655,
+    "TVL_USD": 523333.443051,
+    "TVL_TOKEN": 523405.56833831704,
+    "SHARES": 510973.595591,
+    "PPS": 1.0243299709702964,
+    "VAULT_PNL_SPOT": 11636.391310999985,
+    "FUEL": 2768559
+  },
+  "2025-05-30 16:30": {
+    "LTVL": 560801.674595,
+    "TVL_USD": 523379.79753,
+    "TVL_TOKEN": 523454.14372203284,
+    "SHARES": 510973.595591,
+    "PPS": 1.0244250353417923,
+    "VAULT_PNL_SPOT": 11636.391310999985,
+    "FUEL": 2768559
+  },
+  "2025-05-30 16:40": {
+    "LTVL": 558659.759658,
+    "TVL_USD": 522707.24428,
+    "TVL_TOKEN": 522781.0766514555,
+    "SHARES": 510973.595591,
+    "PPS": 1.0231078105842217,
+    "VAULT_PNL_SPOT": 12108.22596000001,
+    "FUEL": 2768559
+  },
+  "2025-05-30 16:50": {
+    "LTVL": 557907.322195,
+    "TVL_USD": 523129.530839,
+    "TVL_TOKEN": 523207.61957622174,
+    "SHARES": 510973.595591,
+    "PPS": 1.0239425756845062,
+    "VAULT_PNL_SPOT": 12108.22596000001,
+    "FUEL": 2768559
+  },
+  "2025-05-30 17:00": {
+    "LTVL": 557854.183772,
+    "TVL_USD": 523093.060904,
+    "TVL_TOKEN": 523175.4034807539,
+    "SHARES": 510973.595591,
+    "PPS": 1.023879527230054,
+    "VAULT_PNL_SPOT": 12108.22596000001,
+    "FUEL": 2768559
+  },
+  "2025-05-30 17:10": {
+    "LTVL": 558853.032859,
+    "TVL_USD": 522426.620797,
+    "TVL_TOKEN": 522503.9618334306,
+    "SHARES": 510973.595591,
+    "PPS": 1.0225654835042786,
+    "VAULT_PNL_SPOT": 11202.937786999973,
+    "FUEL": 2768559
+  },
+  "2025-05-30 17:20": {
+    "LTVL": 559280.066037,
+    "TVL_USD": 522333.323707,
+    "TVL_TOKEN": 522411.16297028254,
+    "SHARES": 510973.595591,
+    "PPS": 1.0223838716481106,
+    "VAULT_PNL_SPOT": 11202.937786999973,
+    "FUEL": 2768559
+  },
+  "2025-05-30 17:30": {
+    "LTVL": 559125.569184,
+    "TVL_USD": 522882.788371,
+    "TVL_TOKEN": 522960.24401274073,
+    "SHARES": 510973.595591,
+    "PPS": 1.0234584497617276,
+    "VAULT_PNL_SPOT": 11202.937786999973,
+    "FUEL": 2768559
+  },
+  "2025-05-30 17:40": {
+    "LTVL": 558766.635028,
+    "TVL_USD": 522563.23770299996,
+    "TVL_TOKEN": 522625.52421297564,
+    "SHARES": 510973.595591,
+    "PPS": 1.0228033869509419,
+    "VAULT_PNL_SPOT": 11863.597767999978,
+    "FUEL": 2768559
+  },
+  "2025-05-30 17:50": {
+    "LTVL": 558415.474225,
+    "TVL_USD": 523181.554155,
+    "TVL_TOKEN": 523249.9743216423,
+    "SHARES": 510973.595591,
+    "PPS": 1.0240254659664816,
+    "VAULT_PNL_SPOT": 11863.597767999978,
+    "FUEL": 2768559
+  },
+  "2025-05-30 18:00": {
+    "LTVL": 558729.128405,
+    "TVL_USD": 522570.855522,
+    "TVL_TOKEN": 522642.43140298064,
+    "SHARES": 510973.595591,
+    "PPS": 1.0228364751381807,
+    "VAULT_PNL_SPOT": 11863.597767999978,
+    "FUEL": 2768559
+  },
+  "2025-05-30 18:10": {
+    "LTVL": 559744.424384,
+    "TVL_USD": 522133.844195,
+    "TVL_TOKEN": 522205.0155165648,
+    "SHARES": 510973.595591,
+    "PPS": 1.0219804311269243,
+    "VAULT_PNL_SPOT": 11258.198450886703,
+    "FUEL": 2768559
+  },
+  "2025-05-30 18:20": {
+    "LTVL": 560961.291513,
+    "TVL_USD": 522810.10669700004,
+    "TVL_TOKEN": 522882.3219744879,
+    "SHARES": 510973.595591,
+    "PPS": 1.0233059525702382,
+    "VAULT_PNL_SPOT": 11258.198450886703,
+    "FUEL": 2773376
+  },
+  "2025-05-30 18:30": {
+    "LTVL": 562158.692834,
+    "TVL_USD": 522784.05431399995,
+    "TVL_TOKEN": 522855.7116892869,
+    "SHARES": 510973.595591,
+    "PPS": 1.0232538749571667,
+    "VAULT_PNL_SPOT": 11258.198450886703,
+    "FUEL": 2773376
+  },
+  "2025-05-30 18:40": {
+    "LTVL": 561851.637445,
+    "TVL_USD": 522869.426868,
+    "TVL_TOKEN": 522940.63046424405,
+    "SHARES": 510973.595591,
+    "PPS": 1.0234200651002383,
+    "VAULT_PNL_SPOT": 11973.866957999999,
+    "FUEL": 2773376
+  },
+  "2025-05-30 18:50": {
+    "LTVL": 561905.329315,
+    "TVL_USD": 523114.18486000004,
+    "TVL_TOKEN": 523184.2235320043,
+    "SHARES": 510973.595591,
+    "PPS": 1.0238967884962458,
+    "VAULT_PNL_SPOT": 11973.866957999999,
+    "FUEL": 2773376
+  },
+  "2025-05-30 19:00": {
+    "LTVL": 562171.608684,
+    "TVL_USD": 523031.48447200004,
+    "TVL_TOKEN": 523086.2306769027,
+    "SHARES": 510973.595591,
+    "PPS": 1.0237050117470219,
+    "VAULT_PNL_SPOT": 11973.866957999999,
+    "FUEL": 2773376
+  },
+  "2025-05-30 19:10": {
+    "LTVL": 562103.417004,
+    "TVL_USD": 523273.068674,
+    "TVL_TOKEN": 523341.8357912229,
+    "SHARES": 510973.595591,
+    "PPS": 1.024205243298174,
+    "VAULT_PNL_SPOT": 11421.07257899997,
+    "FUEL": 2773376
+  },
+  "2025-05-30 19:20": {
+    "LTVL": 562443.401236,
+    "TVL_USD": 522700.838774,
+    "TVL_TOKEN": 522769.72936893627,
+    "SHARES": 510973.595591,
+    "PPS": 1.0230856034044042,
+    "VAULT_PNL_SPOT": 11421.07257899997,
+    "FUEL": 2773376
+  },
+  "2025-05-30 19:30": {
+    "LTVL": 562296.056621,
+    "TVL_USD": 523063.904469,
+    "TVL_TOKEN": 523132.3458738107,
+    "SHARES": 510973.595591,
+    "PPS": 1.0237952614141397,
+    "VAULT_PNL_SPOT": 11421.07257899997,
+    "FUEL": 2773376
+  },
+  "2025-05-30 19:40": {
+    "LTVL": 562281.411563,
+    "TVL_USD": 523048.735516,
+    "TVL_TOKEN": 523117.5673255087,
+    "SHARES": 510973.595591,
+    "PPS": 1.0237663390814995,
+    "VAULT_PNL_SPOT": 11893.658034999971,
+    "FUEL": 2773376
+  },
+  "2025-05-30 19:50": {
+    "LTVL": 562317.669853,
+    "TVL_USD": 522740.53090300004,
+    "TVL_TOKEN": 522817.3170823599,
+    "SHARES": 510973.595591,
+    "PPS": 1.0231787348574466,
+    "VAULT_PNL_SPOT": 11893.658034999971,
+    "FUEL": 2773376
   }
 }
