Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -142011,5 +142011,32 @@
     "PPS": 1.0231787348574466,
     "VAULT_PNL_SPOT": 11893.658034999971,
     "FUEL": 2773376
+  },
+  "2025-05-30 20:00": {
+    "LTVL": 562510.127909,
+    "TVL_USD": 523231.97731,
+    "TVL_TOKEN": 523301.0635164054,
+    "SHARES": 510973.595591,
+    "PPS": 1.0241254499875816,
+    "VAULT_PNL_SPOT": 11893.658034999971,
+    "FUEL": 2773376
+  },
+  "2025-05-30 20:10": {
+    "LTVL": 561468.868756,
+    "TVL_USD": 523264.591569,
+    "TVL_TOKEN": 523335.96412778774,
+    "SHARES": 510973.595591,
+    "PPS": 1.0241937521693059,
+    "VAULT_PNL_SPOT": 11914.713951000012,
+    "FUEL": 2773376
+  },
+  "2025-05-30 20:20": {
+    "LTVL": 561911.095431,
+    "TVL_USD": 523092.97289499996,
+    "TVL_TOKEN": 523168.56028859044,
+    "SHARES": 510973.595591,
+    "PPS": 1.0238661347725524,
+    "VAULT_PNL_SPOT": 11914.713951000012,
+    "FUEL": 2773376
   }
 }
