Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -142038,5 +142038,86 @@
     "PPS": 1.0238661347725524,
     "VAULT_PNL_SPOT": 11914.713951000012,
     "FUEL": 2773376
+  },
+  "2025-05-30 20:30": {
+    "LTVL": 561605.412448,
+    "TVL_USD": 523362.843822,
+    "TVL_TOKEN": 523432.06771295506,
+    "SHARES": 510973.595591,
+    "PPS": 1.024381831526041,
+    "VAULT_PNL_SPOT": 11914.713951000012,
+    "FUEL": 2773376
+  },
+  "2025-05-30 20:40": {
+    "LTVL": 561402.069517,
+    "TVL_USD": 522810.279375,
+    "TVL_TOKEN": 522880.94150543504,
+    "SHARES": 510973.595591,
+    "PPS": 1.023303250925643,
+    "VAULT_PNL_SPOT": 11967.205015999964,
+    "FUEL": 2773376
+  },
+  "2025-05-30 20:50": {
+    "LTVL": 562213.21368,
+    "TVL_USD": 523324.367592,
+    "TVL_TOKEN": 523394.5862096859,
+    "SHARES": 510973.595591,
+    "PPS": 1.0243084784142702,
+    "VAULT_PNL_SPOT": 11967.205015999964,
+    "FUEL": 2773376
+  },
+  "2025-05-30 21:00": {
+    "LTVL": 561603.12228,
+    "TVL_USD": 523253.747277,
+    "TVL_TOKEN": 523323.7994007878,
+    "SHARES": 510973.595591,
+    "PPS": 1.0241699452111677,
+    "VAULT_PNL_SPOT": 11967.205015999964,
+    "FUEL": 2773376
+  },
+  "2025-05-30 21:10": {
+    "LTVL": 562015.620588,
+    "TVL_USD": 523019.696696,
+    "TVL_TOKEN": 523089.8953599573,
+    "SHARES": 510973.595591,
+    "PPS": 1.0237121837087166,
+    "VAULT_PNL_SPOT": 11854.111065000005,
+    "FUEL": 2773376
+  },
+  "2025-05-30 21:20": {
+    "LTVL": 562232.902369,
+    "TVL_USD": 522981.472272,
+    "TVL_TOKEN": 523051.45132567285,
+    "SHARES": 510973.595591,
+    "PPS": 1.0236369468772715,
+    "VAULT_PNL_SPOT": 11854.111065000005,
+    "FUEL": 2773376
+  },
+  "2025-05-30 21:30": {
+    "LTVL": 562383.83312,
+    "TVL_USD": 522920.05005300004,
+    "TVL_TOKEN": 522987.421292611,
+    "SHARES": 510973.595591,
+    "PPS": 1.0235116370107453,
+    "VAULT_PNL_SPOT": 11854.111065000005,
+    "FUEL": 2773376
+  },
+  "2025-05-30 21:40": {
+    "LTVL": 562173.843816,
+    "TVL_USD": 523297.823968,
+    "TVL_TOKEN": 523367.34808651987,
+    "SHARES": 510973.595591,
+    "PPS": 1.0242551720919846,
+    "VAULT_PNL_SPOT": 11404.073809999973,
+    "FUEL": 2773376
+  },
+  "2025-05-30 21:50": {
+    "LTVL": 561717.943746,
+    "TVL_USD": 523159.76563000004,
+    "TVL_TOKEN": 523229.44932806154,
+    "SHARES": 510973.595591,
+    "PPS": 1.0239852975629518,
+    "VAULT_PNL_SPOT": 11404.073809999973,
+    "FUEL": 2773376
   }
 }
