Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -142119,5 +142119,140 @@
     "PPS": 1.0239852975629518,
     "VAULT_PNL_SPOT": 11404.073809999973,
     "FUEL": 2773376
+  },
+  "2025-05-30 22:00": {
+    "LTVL": 561533.341631,
+    "TVL_USD": 523138.409832,
+    "TVL_TOKEN": 523208.0592888525,
+    "SHARES": 510973.595591,
+    "PPS": 1.023943436223357,
+    "VAULT_PNL_SPOT": 11404.073809999973,
+    "FUEL": 2773376
+  },
+  "2025-05-30 22:10": {
+    "LTVL": 561374.790341,
+    "TVL_USD": 523319.114629,
+    "TVL_TOKEN": 523389.00799712795,
+    "SHARES": 510973.595591,
+    "PPS": 1.0242975615829388,
+    "VAULT_PNL_SPOT": 11549.665656999976,
+    "FUEL": 2773376
+  },
+  "2025-05-30 22:20": {
+    "LTVL": 560744.872516,
+    "TVL_USD": 523524.323977,
+    "TVL_TOKEN": 523602.26741052675,
+    "SHARES": 510973.595591,
+    "PPS": 1.024714920552637,
+    "VAULT_PNL_SPOT": 11549.665656999976,
+    "FUEL": 2773376
+  },
+  "2025-05-30 22:30": {
+    "LTVL": 559998.104754,
+    "TVL_USD": 523503.883631,
+    "TVL_TOKEN": 523582.316261976,
+    "SHARES": 510973.595591,
+    "PPS": 1.0246758751915401,
+    "VAULT_PNL_SPOT": 11549.665656999976,
+    "FUEL": 2773376
+  },
+  "2025-05-30 22:40": {
+    "LTVL": 559450.936017,
+    "TVL_USD": 523504.095211,
+    "TVL_TOKEN": 523581.11922944983,
+    "SHARES": 510973.595591,
+    "PPS": 1.0246735325410852,
+    "VAULT_PNL_SPOT": 11930.701917333587,
+    "FUEL": 2773376
+  },
+  "2025-05-30 22:50": {
+    "LTVL": 558765.911401,
+    "TVL_USD": 522913.83081099996,
+    "TVL_TOKEN": 522987.77082203876,
+    "SHARES": 510973.595591,
+    "PPS": 1.0235123210567132,
+    "VAULT_PNL_SPOT": 11930.701917333587,
+    "FUEL": 2773376
+  },
+  "2025-05-30 23:00": {
+    "LTVL": 557178.580388,
+    "TVL_USD": 523758.568291,
+    "TVL_TOKEN": 523831.66376136127,
+    "SHARES": 510973.595591,
+    "PPS": 1.0251638602881024,
+    "VAULT_PNL_SPOT": 11930.701917333587,
+    "FUEL": 2773376
+  },
+  "2025-05-30 23:10": {
+    "LTVL": 557210.838082,
+    "TVL_USD": 522687.624297,
+    "TVL_TOKEN": 522762.3845456139,
+    "SHARES": 510973.595591,
+    "PPS": 1.0230712292305022,
+    "VAULT_PNL_SPOT": 12633.509320000012,
+    "FUEL": 2773376
+  },
+  "2025-05-30 23:20": {
+    "LTVL": 555876.076783,
+    "TVL_USD": 522740.589179,
+    "TVL_TOKEN": 522815.2053651097,
+    "SHARES": 510973.595591,
+    "PPS": 1.0231746021248194,
+    "VAULT_PNL_SPOT": 12633.509320000012,
+    "FUEL": 2773376
+  },
+  "2025-05-30 23:30": {
+    "LTVL": 555430.019804,
+    "TVL_USD": 522726.721823,
+    "TVL_TOKEN": 522801.7543307815,
+    "SHARES": 510973.595591,
+    "PPS": 1.0231482778011276,
+    "VAULT_PNL_SPOT": 12633.509320000012,
+    "FUEL": 2773376
+  },
+  "2025-05-30 23:40": {
+    "LTVL": 555962.639898,
+    "TVL_USD": 523089.156903,
+    "TVL_TOKEN": 523167.5483284415,
+    "SHARES": 510973.595591,
+    "PPS": 1.0238641543176763,
+    "VAULT_PNL_SPOT": 11848.167748000007,
+    "FUEL": 2773376
+  },
+  "2025-05-30 23:50": {
+    "LTVL": 556413.391159,
+    "TVL_USD": 522758.11117600003,
+    "TVL_TOKEN": 522836.42161522957,
+    "SHARES": 510973.595591,
+    "PPS": 1.0232161233507748,
+    "VAULT_PNL_SPOT": 11848.167748000007,
+    "FUEL": 2773376
+  },
+  "2025-05-31 00:00": {
+    "LTVL": 555949.56753,
+    "TVL_USD": 523330.87305500003,
+    "TVL_TOKEN": 523403.6104547449,
+    "SHARES": 510973.595591,
+    "PPS": 1.0243261392976053,
+    "VAULT_PNL_SPOT": 11848.167748000007,
+    "FUEL": 2773376
+  },
+  "2025-05-31 00:10": {
+    "LTVL": 556256.725595,
+    "TVL_USD": 523031.249931,
+    "TVL_TOKEN": 523115.34595401556,
+    "SHARES": 510973.595591,
+    "PPS": 1.0237619917502239,
+    "VAULT_PNL_SPOT": 11755.094922999968,
+    "FUEL": 2780244
+  },
+  "2025-05-31 00:20": {
+    "LTVL": 554087.98726,
+    "TVL_USD": 524171.47551899997,
+    "TVL_TOKEN": 524243.3440390343,
+    "SHARES": 510973.595591,
+    "PPS": 1.0259695384703515,
+    "VAULT_PNL_SPOT": 11755.094922999968,
+    "FUEL": 2780244
   }
 }
